@@ -180,6 +180,14 @@ Robert A. Beezer is a Professor of Mathematics at the University of Puget Sound,
 <econtact>zoli.web.elte.hu</econtact>
 </contributorinfo>
 
+<contributorinfo codename="tylerueltschi">
+<firstname>Tyler</firstname>
+<lastname>Ueltschi</lastname>
+<location>U. of Puget Sound</location>
+<econtact></econtact>
+</contributorinfo>
+
+
 <contributorinfo codename="andyzimmer">
 <firstname>Andy</firstname>
 <lastname>Zimmer</lastname>
