@@ -847,6 +847,48 @@ S=\set{
 </problem>
 </exercise>
 
+<exercise type="M" number="20" rough="vector representation as formula">
+<problem contributor="tylerueltschi">The set $B=\set{\vect{v}_1,\,\vect{v}_2,\,\vect{v}_3,\,\vect{v}_4}$ is a basis of the vector space $P_3$, polynomials with degree 3 or less.  Therefore $\vectrepname{B}$ is a linear transformation, according to <acroref type="theorem" acro="VRLT" />.  Find a <q>formula</q> for $\vectrepname{B}$.  In other words, find an expression for $\vectrep{B}{a+bx+cx^2+dx^3}$.
+<alignmath>
+\vect{v}_1<![CDATA[&=]]>1 - 5x - 22x^2 + 3x^3
+<![CDATA[&]]>
+\vect{v}_2<![CDATA[&=]]>-2 + 11x + 49x^2 - 8x^3\\
+\vect{v}_3<![CDATA[&=]]>-1 + 7x + 33x^2 - 8x^3
+<![CDATA[&]]>
+\vect{v}_4<![CDATA[&=]]>-1 + 4x + 16x^2 + x^3
+</alignmath>
+</problem>
+<solution contributor="robertbeezer">Our strategy is to determine the values of the linear transformation on a <q>nice</q> basis for the domain, and then apply the ideas of  <acroref type="theorem" acro="LTDB" /> to obtain our formula.   $\vectrepname{B}$ is a linear transformation of the form $\ltdefn{\vectrepname{B}}{P_3}{\complex{4}}$, so for a basis of the domain we choose a very simple one: $C=\set{1,\,x,\,x^2,\,x^3}$.  We now give the vector representations of the elements of $C$, which are obtained by solving the relevant systems of equations obtained from linear combinations of the elements of $B$.
+<alignmath>
+<![CDATA[\vectrep{B}{1}  &=\colvector{20 \\ 7 \\ 1 \\ 4}]]>
+<![CDATA[&]]>
+<![CDATA[\vectrep{B}{x}  &=\colvector{17 \\ 14 \\ -8 \\ -3}]]>
+<![CDATA[&]]>
+<![CDATA[\vectrep{B}{x^2}&=\colvector{-3 \\ -3 \\ 2 \\ 1}]]>
+<![CDATA[&]]>
+<![CDATA[\vectrep{B}{x^3}&=\colvector{0 \\ -1 \\ 1 \\ 1}]]>
+<![CDATA[&]]>
+</alignmath>
+This is enough information to determine the linear transformation uniquely, and in particular, to allow us to use <acroref type="theorem" acro="LTLC" /> to construct a formula.
+<alignmath>
+\vectrep{B}{a+bx+cx^2+dx^3} <![CDATA[&=]]>
+a\vectrep{B}{1} + b\vectrep{B}{x} + c\vectrep{B}{x^2} + d\vectrep{B}{x^3}\\
+<![CDATA[&=]]>
+a\colvector{20 \\ 7 \\ 1 \\ 4} +
+b\colvector{17 \\ 14 \\ -8 \\ -3} +
+c\colvector{-3 \\ -3 \\ 2 \\ 1} +
+d\colvector{0 \\ -1 \\ 1 \\ 1}\\
+<![CDATA[&=]]>
+\colvector{
+20a + 17b - 3c\\
+7a + 14b - 3c - d\\
+a - 8b + 2c + d\\
+4a - 3b + c + d
+}
+</alignmath>
+</solution>
+</exercise>
+
 </exercisesubsection>
 
 </section>
