@@ -11,6 +11,7 @@ New:  Reading Questions, Section OD
 New:  Diagram AIVS, Section IVLT
 New:  Discussion following Theorem OBNM
 New:  Exercises MM.T35, OD.T10, OD.T20
+New:  Exercise VR.M20 (Tyler Ueltschi)
 Edit:  Explained  min(m,n)  in Exercise PD.T15
 Edit:  More on induction in Proof Technique I (Dan Messenger)
 Edit:  Added multiplicities to Solution EE.C19 (Duncan Bennett)
